# jni

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jnidata/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JavaHelp.cpp  JavaHelp.h  VideoTask.cpp  VideoTask.h  native-lib.cpp
app/src/main/java/com/example/jnidata/: JniManage.java  MainActivity.java  NativeClass.java
app/src/main/java/com/example/jnidata/bean/: Use.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jnidata/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
